--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Aplikasi HRIS</name>
-	<description>Mengelola data HRD</description>
+	<name>HRIS J-Express</name>
+	<description>HRD</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
